--- a/index.ipynb
+++ b/index.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,9 +29,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "print(zero_to_three[0])\n",
     "print(zero_to_three[1])\n",
@@ -54,9 +65,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
    "source": [
     "for number in zero_to_three:\n",
     "    print(number)"
@@ -81,9 +103,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is iteration: 1\n",
+      "0\n",
+      "This is iteration: 2\n",
+      "1\n",
+      "This is iteration: 3\n",
+      "2\n",
+      "This is iteration: 4\n",
+      "3\n",
+      "The for loop is finished now! I am not in the for loop block, which is why I only printed once!\n"
+     ]
+    }
+   ],
    "source": [
     "iteration_count = 0\n",
     "for whatever_we_want in zero_to_three:\n",
@@ -104,22 +142,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "countries = ['Croatia', 'USA', 'Argentina', 'France', 'Brazil', 'Japan', 'Vietnam', 'Israel']"
+    "count = ['Croatia', 'USA', 'Argentina', 'France', 'Brazil', 'Japan', 'Vietnam', 'Israel']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "0 Croatia\n",
+      "1\n",
+      "1 USA\n",
+      "2\n",
+      "2 Argentina\n",
+      "3\n",
+      "3 France\n",
+      "4\n",
+      "4 Brazil\n",
+      "5\n",
+      "5 Japan\n",
+      "6\n",
+      "6 Vietnam\n",
+      "7\n",
+      "7 Israel\n"
+     ]
+    }
+   ],
    "source": [
     "for index in [0,1,2,3,4,5,6,7]:\n",
     "    print(index)\n",
-    "    print(countries[index])"
+    "    print(index, countries[index])"
    ]
   },
   {
@@ -131,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,9 +202,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n"
+     ]
+    }
+   ],
    "source": [
     "for index in [0,1,2,3,4,5,6,7]:\n",
     "    print(cities[index]+\",\", countries[index])"
@@ -158,9 +234,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-25-14e8c74c6ab5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mindex\u001b[0m \u001b[0;32min\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m6\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m7\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m8\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m9\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m\",\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcountries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
    "source": [
     "for index in [0,1,2,3,4,5,6,7,8,9,10]:\n",
     "    print(cities[index]+\",\", countries[index])"
@@ -175,9 +277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "len(countries)"
    ]
@@ -198,9 +311,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 8)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "range(0, len(countries))"
    ]
@@ -214,9 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4, 5, 6, 7]"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "list(range(0, len(countries)))"
    ]
@@ -230,9 +365,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n"
+     ]
+    }
+   ],
    "source": [
     "for index in list(range(0, len(countries))):\n",
     "    print(cities[index]+\",\", countries[index])"
@@ -247,9 +397,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Zagreb, Croatia\n",
+      "Distric of Columbia, USA\n",
+      "Buenos Aires, Argentina\n",
+      "Paris, France\n",
+      "Rio de Janeiro, Brazil\n",
+      "Tokyo, Japan\n",
+      "Hanoi, Vietnam\n",
+      "Tel Aviv, Israel\n",
+      "Mexico City, Mexico\n"
+     ]
+    }
+   ],
    "source": [
     "countries.append('Mexico')\n",
     "cities.append('Mexico City')\n",
@@ -400,7 +566,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
