--- a/index.ipynb
+++ b/index.ipynb
@@ -103,20 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is iteration: 12\n",
+      "This is iteration: 1\n",
       "0\n",
-      "This is iteration: 12\n",
+      "This is iteration: 2\n",
       "1\n",
-      "This is iteration: 12\n",
+      "This is iteration: 3\n",
       "2\n",
-      "This is iteration: 12\n",
+      "This is iteration: 4\n",
       "3\n",
       "The for loop is finished now! I am not in the for loop block, which is why I only printed once!\n"
      ]
@@ -126,7 +126,7 @@
     "a = 0\n",
     "for whatever_we_want in zero_to_three:\n",
     "    a += 1\n",
-    "    print(\"This is iteration:\", iteration_count)\n",
+    "    print(\"This is iteration:\", a)\n",
     "    print(whatever_we_want)\n",
     "print(\"The for loop is finished now! I am not in the for loop block, which is why I only printed once!\")"
    ]
