Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -124,10 +124,10 @@
    ],
    "source": [
     "a = 0\n",
-    "for whatever_we_want in zero_to_three:\n",
+    "for b in zero_to_three:\n",
     "    a += 1\n",
     "    print(\"This is iteration:\", a)\n",
-    "    print(whatever_we_want)\n",
+    "    print(b)\n",
     "print(\"The for loop is finished now! I am not in the for loop block, which is why I only printed once!\")"
    ]
   },
