Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -424,6 +424,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 A\n",
+      "1 B\n",
+      "2 C\n"
+     ]
+    }
+   ],
+   "source": [
+    "for idx, item in enumerate(['A', 'B', 'C']):\n",
+    "    print(idx, item)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
