Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -439,7 +439,7 @@
     }
    ],
    "source": [
-    "for idx, item in enumerate(['A', 'B', 'C']):\n",
+    "for idx, item in enumerate(c):\n",
     "    print(idx, item)"
    ]
   },
