Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -425,21 +425,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 A\n",
-      "1 B\n",
-      "2 C\n"
+      "0 Croatia\n",
+      "1 USA\n",
+      "2 Argentina\n",
+      "3 France\n",
+      "4 Brazil\n",
+      "5 Japan\n",
+      "6 Vietnam\n",
+      "7 Israel\n",
+      "8 Mexico\n"
      ]
     }
    ],
    "source": [
-    "for idx, item in enumerate(c):\n",
+    "for idx, item in enumerate(countries):\n",
     "    print(idx, item)"
    ]
   },
